--- a/public/styles.css
+++ b/public/styles.css
@@ -5,6 +5,9 @@
 .main{
 width:100%;
     background: mistyrose;
+    background-position: center;
+    background-size: cover;
+    height: 109vh;
 }
 
 .navbar {
@@ -32,6 +35,7 @@ width:100%;
     height: 70px;
 }
 
+
 /*ul{*/
 /*    float: left;*/
 /*    display: flex;*/
@@ -50,8 +54,6 @@ width:100%;
 /*    font-family: Monospaced;*/
 /*    font-weight: bold;*/
 /*}*/
-
-
 
 
 
