--- a/public/styles.css
+++ b/public/styles.css
@@ -1,59 +1,70 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
-.main{
-width:100%;
-    background: mistyrose;
-    background-position: center;
-    background-size: cover;
-    height: 109vh;
+body {
+    width: 100%;
+    background: url("pliiatsm.jpg");
+    background-position: top;
+    background-size: 1450px;
+    height: 109px;
 }
 
-.navbar {
-    width: 1200px;
+navbar {
+    width:1200px;
     height: 75px;
     margin: auto;
+    color: silver;
 }
-
-.icon{
-    width: 200px;
-    float: left;
-    height: 60px;
-}
-.logo{
-    color: red;
-    font-size: 25px;
-    font-family: Monospaced;
+.pealkiri h1 {
+    font-family:"Times New Roman";
+    font-size: 45px;
     padding-left: 20px;
-    float: left;
-    padding-top: 10px;
-}
-.menu{
-    width: 400px;
-    float: left;
-    height: 70px;
+    margin-top: 2%;
+    letter-spacing: 2px;
+    color: chocolate;
 }
 
+.srch {
+    width: 430px;
+    float: right;
+    margin-left: 570px;
+    padding-top: revert;
+}
+.srch {
+    font-family: sans-serif;
+    width: 200px;
+    height: 40px;
+    background: white;
+    border: chocolate;
+    margin-top: 3px;
+    color: midnightblue;
+    border-right: none;
+    font-size: 16px;
+    float: left;
+    padding: 10px;
+    border-bottom-left-radius: 10px;
+    border-top-left-radius: 10px;
+}
+.btn {
+    width: 100px;
+    height: 40px;
+    background: gainsboro;
+    border: 2px solid lightgray;
+    margin-top: 13px;
+    color: chocolate;
+    font-size: 15px;
+    border-bottom-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.btn:focus {
+    outline: none;
+}
+.btn:hover {
+    background-color: silver;
+}
 
-/*ul{*/
-/*    float: left;*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
-/*}*/
-/*ul li{*/
-/*    list-style: none;*/
-/*    margin-left: 52px;*/
-/*    margin-top: 20px;*/
-/*    font-size: 14px;*/
-/*}*/
-/*ul li a {*/
-/*    text-decoration: none;*/
-/*    color: red;*/
-/*    font-family: Monospaced;*/
-/*    font-weight: bold;*/
-/*}*/
 
 
 
@@ -65,20 +76,10 @@ width:100%;
 
 
 
-/*#background {*/
-/*    background-color: azure;*/
-/*    height: 100vh;*/
-/*}*/
-/*body {*/
-/*    background-color: lavenderblush;*/
-/*    font-family:Monospaced ;*/
-/*    font-size: 18px;*/
-/*}*/
 /*h1 {*/
 /*    font-size: 30px;*/
 /*    color: red;*/
 /*}*/
-
 /*#border {*/
 /*    border-color: #2c3e50;*/
 /*    padding: 15px;*/
@@ -87,7 +88,6 @@ width:100%;
 /*    background-color: lightgray;*/
 /*    text-align: center;*/
 /*    padding: 20px;*/
-
 
 /*.column {*/
 /*    float: left;*/
