--- a/public/styles.css
+++ b/public/styles.css
@@ -6,8 +6,8 @@
 body {
     width: 100%;
     background: url("pliiatsm.jpg");
-    background-position: top;
-    background-size: 1450px;
+    background-position:top;
+    background-size:1000px;
     height: 109px;
 }
 
@@ -26,6 +26,94 @@ navbar {
     color: chocolate;
 }
 
+.form {
+    width: 290px;
+    height: 420px;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.05) 50%, rgba(0, 0, 0, 0.05) 0%);
+    position: absolute;
+    top: 200px;
+    left:700px;
+    border-radius: 20px;
+    padding: 20px;
+}
+
+.form h2 {
+    width: 240px;
+    font-family: Sans-sarif;
+    font-weight: bold;
+    letter-spacing: 1.6px;
+    text-align: center;
+    color: chocolate;
+    font-size: 22px;
+    background-color: white;
+    border-radius: 10px;
+    margin: 2px;
+    padding: 8px;
+}
+
+.form input {
+    width: 240px;
+    height: 35px;
+    background: transparent;
+    border-bottom: 1px solid silver;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    color: midnightblue;
+    font-size: 20px;
+    letter-spacing: 1px;
+    margin-top:20px;
+    font-family: Sans-sarif;
+}
+
+.form input:focus {
+    outline: none;
+}
+
+::placeholder {
+    color: silver;
+    font-family: Sans-sarif;
+}
+
+.btnn {
+    width: 240px;
+    height: 40px;
+    background: silver;
+    border: 2px solid lightgray;
+    border-radius: 10px;
+    margin-top: 20px;
+    color: chocolate;
+    font-size: 18px;
+    transition: 0.4s ease;
+}
+
+.btnn:hover {
+    background: white;
+    color: chocolate;
+}
+
+.btnn a {
+    color: chocolate;
+    font-weight: bold;
+}
+
+.btn {
+    width: 100px;
+    height: 40px;
+    background: gainsboro;
+    border: 2px solid lightgray;
+    margin-top: 13px;
+    color: chocolate;
+    font-size: 15px;
+    border-bottom-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.btn:focus {
+    outline: none;
+}
+.btn:hover {
+    background-color: silver;
+}
 .srch {
     width: 430px;
     float: right;
@@ -47,25 +135,6 @@ navbar {
     border-bottom-left-radius: 10px;
     border-top-left-radius: 10px;
 }
-.btn {
-    width: 100px;
-    height: 40px;
-    background: gainsboro;
-    border: 2px solid lightgray;
-    margin-top: 13px;
-    color: chocolate;
-    font-size: 15px;
-    border-bottom-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-.btn:focus {
-    outline: none;
-}
-.btn:hover {
-    background-color: silver;
-}
-
-
 
 
 
